# dearrow-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: build.yml  docker-build.yml
doc/: dearrow-cli.1
src/: main.rs
src/command/: batch.rs  mod.rs  user.rs  view.rs  vote.rs
