[package]
name = "dearrow-cli"
version = "3.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
csv = "1.3.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.111"
termsize = "0.1.6"
anyhow = "1.0.79"
