[package]
name = "dearrow-cli"
version = "3.3.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
dearrow-browser-api = { git = "https://github.com/mini-bomba/DeArrowBrowser.git" }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", default-features = false, features = ["alloc", "clock"] }
csv = "1.3.0"
termsize = "0.1.6"
tabled = "0.15.0"
anyhow = "1.0.79"
