[package]
name = "dearrow-cli"
version = "3.4.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dearrow-browser-api = { version = "1.13.0", registry = "mschae23" }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", default-features = false, features = ["alloc", "clock"] }
csv = "1.3.1"
termsize = "0.1.9"
tabled = "0.16.0"
anyhow = "1.0.93"
